# neuralhedging

./: .coverage  .gitignore  README.md  requirements.txt  setup.py
configs/: cost_experiment.yaml  default.yaml  dense_experiment.yaml  transaction_costs.yaml
cpp/: CMakeLists.txt
cpp/bindings/: bind_greeks.cpp  bind_iv_solver.cpp  bind_pricing.cpp  bind_simulator.cpp  module.cpp
cpp/include/quantedge/: black_scholes.hpp  gbm.hpp  greeks_engine.hpp  iv_solver.hpp
cpp/src/: bisection.cpp  black_scholes.cpp  gbm.cpp  greeks_engine.cpp  newton_raphson.cpp
cpp/tests/: CMakeLists.txt
data/raw/: copy_of_hft_camp_code.py
docs/: README.md
experiments/dense_hedger_20260705_235037/: config.yaml  metrics.json  summary.json
experiments/dense_hedger_20260706_003702/: config.yaml  metrics.json  summary.json
experiments/lstm_hedger_20260705_235217/: metrics.json  summary.json
experiments/lstm_hedger_20260706_002631/: metrics.json
experiments/lstm_hedger_20260706_003532/: config.yaml
experiments/lstm_hedger_20260706_004247/: config.yaml  metrics.json  summary.json
python/backtesting/: backtester.py
python/dashboard/: app.py
python/data/: loader.py  preprocessor.py
python/features/: feature_engine.py
python/hedging/: __init__.py  delta_hedge.py
python/models/: __init__.py  dense_hedger.py  lstm_hedger.py
python/risk/: __init__.py  metrics.py
python/training/: loss.py  pnl.py  train.py  trainer.py
python/utils/: config.py  experiment.py  seed.py
tests/: test_greeks.py  test_hedging.py  test_iv_solver.py  test_models.py  test_pnl.py  test_pricing.py  test_risk.py  test_simulator.py
